# wayne

./: .gitattributes  Cargo.toml  LICENSE.md  README.md  flake.nix  justfile
nix/devShells/: build.nix  default.nix  nightly.nix  stable.nix  vscode.nix
wayne/: Cargo.toml
wayne-buffer/: Cargo.toml
wayne-buffer/src/: init.rs  lib.rs  raw.rs
wayne-core/: Cargo.toml  README.md
wayne-core/examples/: connect.rs
wayne-core/src/: buffer.rs  client.rs  lib.rs  listener.rs  lock.rs  message.rs  server.rs  socket.rs  stream.rs  sys.rs
wayne-macros/: Cargo.toml
wayne-macros/src/: lib.rs  protocol.rs
wayne-macros/src/protocol/: mod.rs  xml.rs
wayne-message/: Cargo.toml
wayne-message/src/: buffer.rs  lib.rs
wayne-protocol/: Cargo.toml
wayne-protocol-macros/: Cargo.toml
wayne-protocol-macros/src/: lib.rs  protocol.rs  xml.rs
wayne-protocol-macros/src/protocol/: generator.rs  xml.rs
wayne-protocol/examples/: parse.rs
wayne-protocol/src/: buffer.rs  lib.rs  macros.rs  parse.rs  parser.rs  protocols.rs  types.rs
wayne-protocol/src/parse/: array.rs  builder.rs  bytes.rs  custom.rs  fd.rs  fixed.rs  float.rs  id.rs  int.rs  mod.rs  pad.rs  raw_id.rs  stash.rs  string.rs  uint.rs  utils.rs
wayne-protocol/src/types/: id.rs  mod.rs  raw_enum.rs  string.rs
wayne-scanner/: Cargo.toml
wayne-scanner/src/: lib.rs  xml-old.rs
wayne-scanner/src/xml/: error.rs  file.rs  mod.rs  tag.rs
wayne-server/: Cargo.toml  README.md
wayne-server/src/: lib.rs  lock.rs  socket.rs
wayne-stream/: Cargo.toml
wayne-stream/src/: lib.rs  message.rs
wayne-stream/src/buffer/: mod.rs  read.rs
wayne/examples/: connect.rs  protocol.rs
wayne/protocol/: example.xml
wayne/src/: lib.rs
