[package]
name = "wayne-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "the core foundation structures for wayne"
repository = "https://github.com/rhedgeco/wayne"
readme = "README.md"

[dependencies]
libc = "0.2"
log = "0.4.26"

[dev-dependencies]
anyhow = "1.0.95"
constcat = "0.6.0"
