[package]
name = "wayne-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "core foundation structures for wayne"
repository = "https://github.com/rhedgeco/wayne"
readme = "README.md"

[dependencies]
fs2 = "0.4"
libc = "0.2"
log = "0.4"
thiserror = "2.0"

[dev-dependencies]
anyhow = "1.0.95"
constcat = "0.6.0"
env_logger = "0.11"
