[package]
name = "wayne"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "an experimental implementation of the wayland server protocol"
repository = "https://github.com/rhedgeco/wayne"
readme = "README.md"

[dependencies]
wayne-core.workspace = true
wayne-protocol.workspace = true

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
